fix: add-item-requests